--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -2,7 +2,7 @@
 	{% if photos %}
 		{% for photo in photos %}
 			<div>
-				<img src="{{ media_url }}brother"/>
+				<img src="{{ photo }}" />
 			</div>
 		{% endfor %}
 	{% endif %}
