really committed this time:

--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -2,16 +2,17 @@
 <head>
 <title>Jibe Flickr Photos</title>
 <style>
-body{
-	background-color: green;
-}
 
 .photo-container{
   margin-bottom: 10px;
   border: 1px solid #ccc;
   padding: 4px;
   width: 200px;
-  display: block;
+  min-height: 300px;
+  display: inline-block;
+  float: left
+  background: #fff;
+  border-radius: 8px;
 }
 
 .photo-container .rating{
@@ -25,6 +26,7 @@ body{
   max-width: 100%;
   height: auto;
 } 
+
 </style>
 </head>
 <body>
