--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -10,7 +10,7 @@
   width: 200px;
   min-height: 300px;
   display: inline-block;
-  float: left
+  float: left;
   background: #fff;
   border-radius: 8px;
 }
