--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -6,10 +6,11 @@
 .photo-container{
   width: 780px;
   margin: 5px auto;
-  position: relative;
   border: 1px solid #ccc;
   display: block;
   background: #fff;
+  position: relative;
+  overflow: hidden;
 }
 
 .photo-container img{
@@ -19,9 +20,9 @@
 
 .photo-container .rating{
   position: absolute;
-  left: 0;
+  right: 0;
   bottom: 10px;
-  width: 100%;
+  width: 400px;
   background: rgba(0,0,0,0.8);
   padding: 4px;
   display: block;
@@ -46,6 +47,10 @@ body{
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   margin: 0 auto;
+}
+
+h1{
+  color: #8f8;
 }
 
 </style>
