--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -4,7 +4,7 @@
 <style>
 
 .photo-container{
-  width: 780px;
+  width: 580px;
   margin: 5px auto;
   border: 1px solid #ccc;
   display: block;
@@ -22,7 +22,7 @@
   position: absolute;
   right: 0;
   bottom: 10px;
-  width: 400px;
+  width: 300px;
   background: rgba(0,0,0,0.8);
   padding: 4px;
   display: block;
@@ -50,7 +50,7 @@ body{
 }
 
 h1{
-  color: #8f8;
+  color: #000;
 }
 
 </style>
