--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -3,7 +3,12 @@
 <title>Jibe Flickr Photos</title>
 <style>
 
-.photo-container{
+ul, ul.li{
+  margin: 0; 
+  padding: 0;
+}
+
+ul.li.photo-container{
   width: 580px;
   margin: 5px auto;
   border: 1px solid #ccc;
@@ -11,6 +16,7 @@
   background: #fff;
   position: relative;
   overflow: hidden;
+  padding: 0;
 }
 
 .photo-container img{
