--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -6,6 +6,8 @@
 ul, ul.li{
   margin: 0; 
   padding: 0;
+  list-style: none;
+  list-style-tope: none;
 }
 
 ul.li.photo-container{
@@ -17,6 +19,7 @@ ul.li.photo-container{
   position: relative;
   overflow: hidden;
   padding: 0;
+  margin-left: 10px;
 }
 
 .photo-container img{
