--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -32,7 +32,7 @@ ul.li.photo-container{
   right: 0;
   bottom: 10px;
   width: 300px;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.5);
   padding: 4px;
   display: block;
   font-size: 14px;
@@ -56,6 +56,7 @@ body{
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   margin: 0 auto;
+  padding: 0;
 }
 
 h1{
@@ -66,7 +67,7 @@ h1{
 </head>
 <body>
 <div class="container">
-<h1><span style="color: #fcc">DC</span>Tech</h1>
+<h1><span style="color: #f44">#DC</span>Tech</h1>
 	{% if photos %}
 		{% for photo in photos %}
 		<div>
