--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -10,7 +10,7 @@ ul, ul.li{
   list-style-tope: none;
 }
 
-ul.li.photo-container{
+ul li.photo-container{
   width: 580px;
   margin: 5px auto;
   border: 1px solid #ccc;
@@ -77,7 +77,9 @@ h1{
 				    <img src="{{ photo.url_m }}" />
 				  </div>
 				  <div class="views">
-				    {{ photo.views }} views
+				   "{{ photo.title }}" <br>
+				    {{ photo.views }} views <br>
+				   Tags: {{ photo.tags }}
 				  </div>
 				</li>
 			</ul>
