--- a/templates/photo/photos.html
+++ b/templates/photo/photos.html
@@ -27,7 +27,7 @@ ul li.photo-container{
   height: auto;
 } 
 
-.photo-container .rating{
+.photo-container .info{
   position: absolute;
   bottom: 0px;
   background: rgba(0,0,0,0.5);
@@ -74,7 +74,7 @@ h1{
 				  <div>
 				    <img src="{{ photo.url_m }}" />
 				  </div>
-				  <div class="views">
+				  <div class="info">
 				   "{{ photo.title }}" <br>
 				    {{ photo.views }} views <br>
 				   Tags: {{ photo.tags }}
